Update hibernate libs, id creation